# Legal-Discovery-OpenEnv

./: Dockerfile  Dockerfile.txt  README.md  inference.py  openenv.yaml  pyproject.toml
server/: app.py  env.py  models.py
