[project]
name = "legal-discovery-env"
version = "1.0.0"
description = "Legal discovery simulation"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
